--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -15,6 +15,8 @@
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
+<div th:if="${message}" th:text="${message}" style="color:red;"></div>
+
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default">
@@ -23,7 +25,7 @@
                 <div class="well well-sm">
                     <div class="media">
                         <a class="thumbnail pull-left" href="#">
-                            <img class="media-object" src="../../static/images/80-text.png">
+                            <img class="media-object" src="../../static/images/80-text.png" alt="">
                         </a>
                         <div class="media-body">
                             <h4 class="media-heading" th:text="${user.name}">사용자 이름</h4>
