--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -66,7 +66,7 @@
             <a th:href="@{/users/login}" role="button">로그인</a>
           </li>
           <li th:if="${session.loginUser == null}">
-            <a th:href="@{/users/create}" role="button">회원가입</a>
+            <a th:href="@{/users/signup}" role="button">회원가입</a>
           </li>
 
           <li th:if="${session.loginUser != null}">
