--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -21,7 +21,8 @@
             <form name="question" method="post" action="/questions">
                 <div class="form-group">
                     <label for="writer">글쓴이</label>
-                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" th:value="${writerName.name}" readonly/>
+<!--                    <input class="form-control" id="writer" name="writer" placeholder="글쓴이" th:value="${writerName.name}" readonly/>-->
+                    <input type="text" class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
                 </div>
                 <div class="form-group">
                     <label for="title">제목</label>
