[디노] step5-2 스프링 카페 5단계 - 게시글 권한부여 (#40)
* Refactor: 사용하지 않는 매개변수 제거

* Refactor: 불필요한 메서드 제거

* Refactor: 사용하지 않는 매개변수 제거

* Feat: 글을 조회, 작성할때 로그인 여부를 체크하도록 함
로그인 여부 체크는 인터셉터를 사용하는 것이 바람직 하다고 함.
추후 리팩토링 할 때 생각해보자.

* Feat: html에서 put과 delete요청 보내도록 변경

* Feat: html에서 글쓴이 부분 제거

* Feat: form에서도 제거

* Test: 메서드에 user 전달
메서드에 user 전달해주면서, 테스트 변경

* Feat: 메서드에 user 전달

* Feat: Article 저장할 때 content 그대로 저장하고, 출력할 때 변환하도록 수정
escapeAndConvertNewlines을 선언하여, content를 모델에 전달하기 전에 한번 변환해서 전달하도록 함.

* Feat: ArticleRepository에 delete 추가

* Feat: ArticleService에 delete 추가

* Feat: ArticleController에 delete 매핑 추가

* Refactor: 사용하지 않는 UserService 제거

* Refactor: 도메인으로 유저 확인 로직 이동

* Feat: show.html에서 수정 링크를 POST 폼에서 앵커 태그로 변경

* Feat: form과 비슷한 update-form 생성

* Feat: GetMapping으로 update-form과 연결

* Feat: update-form에 이전의 article 내용이 미리 들어가 있게 수정

* Feat: 질문하기를 수정하기로 변경

* Feat: ArticleForm에 getter 추가

* Fix: html mustache에 맞게 수정하고 put으로 변경

* Feat: Article에 update 메서드 추가

* Feat: put을 받아 article 수정 기능 추가

* Refactor: 텍스트 변환 메서드를 utility 클래스로 이동

* Refactor: 메서드 명 변경

* Refactor: 컨트롤러의 로직 서비스로 이동

* Feat: 업데이트 폼도 같은 유저만 뜨도록 수정
서비스에 새로운 메서드 추가

* Refactor: 컨트롤러의 로직 서비스로 이동

* Refactor: 예외 상황을 서비스와 도메인 내부의 Exception으로 처리

* Refactor: 예외 상황 먼저 처리하도록 수정

* Feat: 회원가입 시 즉시 로그인 되도록 함
추가로 메인 화면으로 리다이렉션 하도록 변경

* Refactor: 예외 먼저 처리하도록 수정

* Refactor: url에서 어떤 form인지 잘 드러나게 수정

* Refactor: ControllerAdvice 역할에 따라 분리

* Refactor: 인터셉터로 로그인 여부 확인하도록 변경
인터셉터를 추가하고, MvcConfig에서 추가할 페이지 선택함.
그리고 Controller에 있는 로직 제거

* Docs: README 추가

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -26,15 +26,15 @@
                       </div>
                   </div>
                   <div class="article-doc">
-                      <p>{{{article.content}}}</p>
+                      <p>{{{parsedContent}}}</p>
                   </div>
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" href="/questions/423/form">수정</a>
+                              <a class="link-modify-article" href="/articles/{{article.id}}/update-form">수정</a>
                           </li>
                           <li>
-                              <form class="form-delete" action="/questions/423" method="POST">
+                              <form class="form-delete" action="/articles/{{article.id}}" method="POST">
                                   <input type="hidden" name="_method" value="DELETE">
                                   <button class="link-delete-article" type="submit">삭제</button>
                               </form>
