--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -63,10 +63,10 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="../index.html">Posts</a></li>
-                <li><a href="login.html" role="button">로그인</a></li>
-                <li><a href="form.html" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li th:if="${session.user == null}"><a th:href="@{/auth/login}" role="button">로그인</a></li>
+                <li th:if="${session.user == null}"><a th:href="@{/users/form}" role="button">회원가입</a></li>
+                <li th:if="${session.user != null}"><a th:href="@{/auth/logout}" role="button">로그아웃</a></li>
+                <li th:if="${session.user != null}"><a th:href="@{/users/{userId}/form(userId=${session.user.userId})}" role="button">개인정보수정</a></li>
             </ul>
         </div>
     </div>
@@ -74,13 +74,11 @@
 
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
-        <div class="panel panel-default content-main"> <!-- <form name="question" method="get"   th:action="@{/users/{userId}/form(userId=${user.userId})}" > -->
-            <form name="question" method="post" th:object="${user}"   th:action="@{/users/{userId}/update(userId=${user.userId})}" >
-                <!-- Hidden 필드 추가 -->
-                <input type="hidden" name="_method" value="PUT" />
+        <div class="panel panel-default content-main">
+            <form name="question" method="post" th:object="${user}" action="/auth/update" >
                 <div class="form-group">
                     <label for="userId">사용자 아이디</label>
-                    <input class="form-control" type="userId"  id="userId" name="userId" th:value="${user.userId}" required placeholder="User ID">
+                    <input class="form-control"  type="text"   id="userId" name="userId" th:value="${user.userId}" required placeholder="User ID" readonly>
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
@@ -88,13 +86,13 @@
                 </div>
                 <div class="form-group">
                     <label for="name">이름</label>
-                    <input class="form-control" type="name" id="name" name="name" th:value="${user.name}" placeholder="Name" required>
+                    <input class="form-control"  type="text"  id="name" name="name" th:value="${user.name}" placeholder="Name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">이메일</label>
                     <input type="email" class="form-control" id="email"  name="email" th:value="${user.email}" placeholder="Email" required>
                 </div>
-                <button type="submit" class="btn btn-success clearfix pull-right">정보수정</button>
+                <button type="submit" class="btn btn-success clearfix pull-right" >정보수정</button>
                 <div class="clearfix" />
             </form>
         </div>
