--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -75,10 +75,12 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Posts</a></li>
-                <li><a href="/user/login" role="button">로그인</a></li>
-                <li><a href="/users/join" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li th:if="${session.LOGGED_IN_USER == null}"><a href="/users/login" role="button">로그인</a></li>
+                <li th:if="${session.LOGGED_IN_USER == null}"><a href="/users/join" role="button">회원가입</a></li>
+                <li th:if="${session.LOGGED_IN_USER != null}"><a href="/users/logout" role="button">로그아웃</a></li>
+                <li th:if="${session.LOGGED_IN_USER != null}">
+                    <a th:href="@{/users/{seq}/verify(seq=${session.LOGGED_IN_USER.seq})}" role="button">개인정보수정</a>
+                </li>
             </ul>
         </div>
     </div>
