--- a/src/main/resources/templates/partials/nav.html
+++ b/src/main/resources/templates/partials/nav.html
@@ -19,7 +19,7 @@
                 <li>
                     {{#loginUser}}
                     <span class="navbar-text">
-                        안녕하세요! {{loginUser.userId}}님
+                        안녕하세요! {{loginUser.userName}}님
                     </span>
                     {{/loginUser}}
                 </li>
