--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -18,7 +18,7 @@
     <div class="container" id="main">
        <div class="col-md-6 col-md-offset-3">
           <div class="panel panel-default content-main">
-              <form name="question" method="post" action="/user/login">
+              <form name="question" method="post" action="/users/login">
                   <div class="form-group">
                       <label for="loginId">사용자 아이디</label>
                       <input class="form-control" id="loginId" name="loginId" placeholder="User ID">
