--- a/src/main/resources/templates/user/login_failed.html
+++ b/src/main/resources/templates/user/login_failed.html
@@ -19,7 +19,7 @@
        <div class="col-md-6 col-md-offset-3">
           <div class="panel panel-default content-main">
               <div class="alert alert-danger" role="alert">아이디 또는 비밀번호가 틀립니다. 다시 로그인 해주세요.</div>
-              <form name="question" method="post" action="/user/login">
+              <form name="question" method="post" action="/users/login">
                   <div class="form-group">
                       <label for="loginId">사용자 아이디</label>
                       <input class="form-control" id="loginId" name="loginId" placeholder="User ID">
