refactor: 로그인 상태이면 로그아웃이 보이게 수정 * 로그인: 로그아웃, 개인정보 수정 * 로그인x : 로그인, 회원가입

--- a/src/main/resources/templates/layout/subnav.html
+++ b/src/main/resources/templates/layout/subnav.html
@@ -24,13 +24,17 @@
                 <li th:if="${session.user == null}">
                     <a th:href="@{/users/login}" role="button">로그인</a>
                 </li>
+                <li th:if="${session.user == null}">
+                    <a th:href="@{/users/new}" role="button">회원가입</a>
+                </li>
+
                 <!-- 사용자가 로그인했을 때 -->
                 <li th:if="${session.user != null}">
                     <a th:href="@{/users/logout}" role="button">로그아웃</a>
                 </li>
-                <li><a th:href="@{/users/new}" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li th:if="${session.user != null}">
+                    <a href="#" role="button">개인정보수정</a>
+                </li>
             </ul>
         </div>
     </div>
