Fix: mustache에서 html 사용하도록 수정

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -64,7 +64,7 @@
                                   </div>
                               </div>
                               <div class="article-doc comment-doc">
-                                  <p>{{text}}</p>
+                                  <p>{{{text}}}</p>
                               </div>
                               <div class="article-util">
                                   <ul class="article-util-list">
