--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,203 +1,166 @@
-/*
-A custom Bootstrap 3.2 'Google Plus style' theme
-from http://bootply.com
-
-This CSS code should follow the 'bootstrap.css'
-in your HTML file.
-
-license: MIT
-author: bootply.com
-*/
-
-@import url(http://fonts.googleapis.com/css?family=Roboto:400);
 body {
-  background-color:#e0e0e0;
-  -webkit-font-smoothing: antialiased;
-  font: normal 14px Roboto,arial,sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
+    background-color: white;
 }
-.navbar-default {background-color:#f4f4f4;margin-top:50px;border-width:0;z-index:5;}
-.navbar-default .navbar-nav > .active > a,.navbar-default .navbar-nav > li:hover > a {border:0 solid #4285f4;border-bottom-width:2px;font-weight:800;background-color:transparent;}
-.navbar-default .dropdown-menu {background-color:#ffffff;}
-.navbar-default .dropdown-menu li > a {padding-left:30px;}
-
-.header {background-color:#ffffff;border-width:0;}
-.header .navbar-collapse {background-color:#ffffff;}
-.btn,.form-control,.panel,.list-group,.well {border-radius:1px;box-shadow:0 0 0;}
-.form-control {border-color:#d7d7d7;}
-.btn-primary {border-color:transparent;}
-.btn-primary,.label-primary,.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {background-color:#4285f4;}
-.btn-plus {background-color:#ffffff;border-width:1px;border-color:#dddddd;box-shadow:1px 1px 0 #999999;border-radius:3px;color:#666666;text-shadow:0 0 1px #bbbbbb;}
-.well,.panel {border-color:#d2d2d2;box-shadow:0 1px 0 #cfcfcf;border-radius:3px;}
-.btn-success,.label-success,.progress-bar-success{background-color:#65b045;}
-.btn-info,.label-info,.progress-bar-info{background-color:#a0c3ff;border-color:#a0c3ff;}
-.btn-danger,.label-danger,.progress-bar-danger{background-color:#dd4b39;}
-.btn-warning,.label-warning,.progress-bar-warning{background-color:#f4b400;color:#444444;}
-
-hr {border-color:#ececec;}
-button {
- outline: 0;
+h1, h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    line-height: 1.2;
 }
-textarea {
- resize: none;
- outline: 0; 
+.post-header {
+    background: linear-gradient(to right, #4f46e5, #7c3aed);
+    color: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    margin-bottom: 2rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
-.panel .btn i,.btn span{
- color:#666666;
+.post-title {
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    line-height: 1.2;
 }
-.panel .panel-heading {
- background-color:#ffffff;
- font-weight:700;
- font-size:16px;
- color:#262626;
- border-color:#ffffff;
+.post-meta {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 0.9rem;
+    opacity: 0.9;
 }
-.panel .panel-heading a {
- font-weight:400;
- font-size:11px;
+.post-content {
+    background: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    line-height: 1.8;
+    font-size: 1.1rem;
+    color: #374151;
 }
-.panel .panel-default {
- border-color:#cccccc;
+.author-info {
+    background: white;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    margin-top: 2rem;
 }
-.panel .panel-thumbnail {
- padding:0;
+.author-avatar {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    background-color: #e5e7eb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    color: #4f46e5;
 }
-.panel .img-circle {
- width:50px;
- height:50px;
+.comment-section {
+    background: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+    margin-top: 2rem;
 }
-.list-group-item:first-child,.list-group-item:last-child {
- border-radius:0;
+.comment-input {
+    border: 2px solid #e5e7eb;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    width: 100%;
+    margin-bottom: 1rem;
+    transition: border-color 0.2s;
 }
-h3,h4,h5 { 
- border:0 solid #efefef; 
- border-bottom-width:1px;
- padding-bottom:10px;
+.comment-input:focus {
+    border-color: #4f46e5;
+    outline: none;
 }
-.modal-dialog {
- width: 450px;
+.comment-item {
+    padding: 1.5rem;
+    border-bottom: 1px solid #e5e7eb;
 }
-.modal-footer {
- border-width:0;
+.comment-item:last-child {
+    border-bottom: none;
 }
-.dropdown-menu {
- background-color:#f4f4f4;
- border-color:#f0f0f0;
- border-radius:0;
- margin-top:-1px;
+.comment-author {
+    font-weight: 500;
+    color: #4f46e5;
 }
-/* end theme */
-
-/* template layout*/
-#subnav {
- position:fixed;
- width:100%;
+.comment-content {
+    margin-top: 0.5rem;
+    color: #374151;
 }
-
-@media (max-width: 768px) {
- #subnav {
-  padding-top: 6px;
- }
+.btn {
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.5rem;
+    font-weight: 500;
+    transition: all 0.2s;
 }
-
-#main {
- padding-top:120px;
+.btn-primary {
+    background-color: #4f46e5;
+    color: white;
 }
-
-.content-main {
-    position:relative;
-    padding:1em;
-    padding-right: 1em;
-    border-bottom:1px
+.btn-primary:hover {
+    background-color: #4338ca;
 }
-.qna-header {
-    position:relative;padding:1em
+.btn-secondary {
+    background-color: #e5e7eb;
+    color: #374151;
 }
-
-.article {
-    position:relative;padding:.6em 0 .8em
+.btn-secondary:hover {
+    background-color: #d1d5db;
 }
-
-.article-header{
-    display:table;width:100%;
-    padding-bottom:.6em;
-    border-bottom:1px dashed #dadada
+.form-header {
+    background: linear-gradient(to right, #4f46e5, #7c3aed);
+    color: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    margin-bottom: 2rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
-.article-header-text,.article-header-thumb{display:table-cell;vertical-align:middle}
-.article-header-thumb{width:48px}
-.article-author-thumb{width:40px;height:40px;-webkit-border-radius:3px;border-radius:3px}
-.article-author-name{font-weight:bold;font-size:1.1em}
-.article-author-fbgroup{display:inline-block;margin-left:.8em;font-style:italic;font-size:1em;color:#666;}
-.article-author-fbgroup a{display:inline-block;color:#333;font-weight:bold;}
-@media (max-width: 480px){.article-author-fbgroup a{overflow:hidden;max-width:8em;white-space:nowrap;-o-text-overflow:ellipsis;text-overflow:ellipsis}
-}.article-header-time{display:block;font-size:.8em;color:#666;}
-.article-header-time:hover{text-decoration:none;}
-.article-header-time:hover .icon-link{color:#3aa}
-.article-doc,.article-util{padding-left:48px;}
-@media (max-width: 480px){.article-doc,.article-util,.article-doc,.article-util{padding-left:0}
-}.article-doc img{max-width:100%}
-.article-doc blockquote{margin-left:0;margin-right:0;border-left:4px solid #efefef;padding-left:.5em}
-.article-util form{display:inline-block}
-.article-util-list a,.article-util-list button{color:#999;padding:.4em;-webkit-border-radius:3px;border-radius:3px;border:0;background-color:transparent;white-space:nowrap;}
-.article-util-list a:hover,.article-util-list button:hover{text-decoration:none;background-color:#dadada}
-.article-util-list{margin:0;padding:0;list-style:none;color:#999;}
-.article-util-list li{display:inline-block;}
-.article-util-list li:before{content:'•';margin:0 -.4em}
-.article-util-list li:first-child:before{display:none}
-.article-util-list .btn-like-article{color:#44ca7f;}
-.article-util-list .btn-like-article:hover{background-color:#e3f7ec}
-.article-util-list .btn-dislike-article{color:#be6060;}
-.article-util-list .btn-dislike-article:hover{background-color:#f9f1f1}
-.article-util-list .link-answer-article{color:#5989b6;}
-.article-util-list .link-answer-article:hover{background-color:#e7eef4}
-.article-util-list .foundicon-thumb-up,.article-util-list .foundicon-thumb-down{position:relative;top:2px}.article-util form{display:inline-block}
-
-.qna-list h1 small {
-    font-size:.4em
+.form-title {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
 }
-.qna-list .list {
-    list-style:none;
-    margin:0;
-    padding:0;
-    border-top:1px solid #dadada;
-    font-size:14px;
+.form-subtitle {
+    font-size: 1rem;
+    opacity: 0.9;
 }
-
-@media (max-width: 768px) {
-    .qna-list .list{ margin:0 -1em  }
+.form-container {
+    background: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
-
-.qna-list .list > li {
-    position:relative;
-    padding:1em;
-    padding-left:4em;
-    border-bottom:1px solid #eaeaea
+.form-group {
+    margin-bottom: 1.5rem;
 }
-.qna-list .list .main .subject{display:block;font-size:1.2em;line-height:1.4em;}
-.qna-list .list .main .subject a{display:block;color:#000}
-.qna-list .list .tags{font-size:.9em;color:#999}
-.qna-list .list .tag:before{content:', '}
-.qna-list .list .tag:first-child:before{content:''}
-.qna-list .list .auth-info{margin-top:.8em;color:#999;}
-.qna-list .list .auth-info .type{padding-right:.4em;}
-@media (max-width: 480px){.qna-list .list .auth-info .type{display:none}
-}.qna-list .list .auth-info .time{font-size:.9em}
-.qna-list .list .reply{position:absolute;left:0;top:.8em;width:4em;text-align:center;}
-.qna-list .list .reply .icon-reply{position:absolute;left:0;top:0;font-size:2em;color:#eee;}
-@media (max-width: 979px){.qna-list .list .reply .icon-reply{left:.5em}
-}.qna-list .list .reply .point{position:relative;z-index:1;color:#aaa;font-size:2em;line-height:2em;letter-spacing:-.2em}
-.qna-header{border-bottom:4px solid #efefef}
-.qna-title{margin-bottom:0}
-.qna-nav{padding-bottom:.67em;}
-.qna-nav .divider{padding-left:.4em;padding-right:.4em;font-size:.8em;color:#dadada}
-.qna-comment .article{border-bottom:1px solid #dfdfdf;}
-.qna-comment .article:first-child{border-top:1px solid #dfdfdf}
-.qna-comment .article.best-article{border-bottom-width:4px;}
-.qna-comment .article.best-article .btn-like-article{top:108px}
-.qna-comment-slipp,.qna-comment-fb{margin-top:2em;border-top:4px solid #efefef}
-.qna-comment-count{margin:0;padding:1em 0 0;font-weight:bold;font-size:1.2em}
-
-.qna-write {
-    padding-top: 1.4em;
-    padding-right: 2.5em;
+.form-label {
+    display: block;
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+    color: #374151;
 }
-
+.form-input {
+    width: 100%;
+    padding: 0.75rem 1rem;
+    border: 2px solid #e5e7eb;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    transition: all 0.2s;
+}
+.form-input:focus {
+    border-color: #4f46e5;
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.1);
+}
+.form-textarea {
+    min-height: 300px;
+    resize: vertical;
+}
+.error-message {
+    color: #ef4444;
+    font-size: 0.875rem;
+    margin-top: 0.25rem;
+}
