--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,19 +9,20 @@
   <div class="container d-flex justify-content-center" id="main">
     <div class="col-md-10 col-md-offset-1">
       <div class="panel panel-default">
-        <h1 class="text-center">글 목록</h1>
+        <h1 class="text-center">커뮤니티</h1>
+        <div class="text-end">
+          <a class="btn btn-primary f" th:href="@{/article}">글 작성</a>
+        </div>
         <table class="table table-hover">
           <tr>
             <th>번호</th>
             <th>제목</th>
-            <th>내용</th>
           </tr>
           <tr th:each="article, stat : ${articles}">
             <td th:text="${stat.count}"></td>
             <td>
               <a th:text="${article.title}" th:href="@{/article/{id}(id=${article.id})}"></a>
             </td>
-            <td th:text="${article.content}"></td>
           </tr>
         </table>
       </div>
