--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -11,7 +11,7 @@
             <!-- 로그인한 경우 -->
             <div th:if="${session.sessionedUser != null}">
                 <span class="me-2">안녕하세요, <span th:text="${session.sessionedUser.name}"></span>님!</span>
-                <a th:href="@{/users/{id}/form(id=${session.sessionedUser.id})}" class="btn btn-outline-secondary me-2">개인정보 수정</a>
+                <a th:href="@{/users}" class="btn btn-outline-secondary me-2">회원 목록</a>
                 <form th:action="@{/auth/logout}" method="post" style="display: inline;">
                     <button type="submit" class="btn btn-danger">로그아웃</button>
                 </form>
