--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -2,7 +2,7 @@
 <html lang="kr" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>SLiPP Java Web Programming</title>
+    <title>회원 PROFILE - SLiPP Java Web Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -16,6 +16,11 @@
     <th:block th:replace="~{layout/subnav :: subnav}"></th:block>
 
     <div class="container" id="main">
+        <!-- 에러 메시지 출력 -->
+        <script th:if="${errorMessage}">
+            alert('[[${errorMessage}]]');
+        </script>
+
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
                 <div class="panel-heading"><h4>Profiles</h4></div>
@@ -32,6 +37,10 @@
                                         <span class="glyphicon glyphicon-envelope"></span>&nbsp;
                                         <span th:text="${user.email}">사용자 이메일</span>
                                     </a>
+                                </p>
+                                <!-- 개인정보 수정 버튼 추가 -->
+                                <p>
+                                    <a th:href="@{/users/edit/{id}(id=${user.id})}" class="btn btn-primary">개인정보 수정</a>
                                 </p>
                             </div>
                             <p th:if="${user == null}">사용자 정보를 찾을 수 없습니다.</p>
