--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -64,10 +64,10 @@
         <div class="collapse navbar-collapse" id="navbar-collapse2">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="../index.html">Posts</a></li>
-                <li><a href="../user/login.html" role="button">로그인</a></li>
-                <li><a href="../user/form.html" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <li th:if="${session.user == null}"><a th:href="@{/auth/login}" role="button">로그인</a></li>
+                <li th:if="${session.user == null}"><a th:href="@{/users/form}"role="button">회원가입</a></li>
+                <li th:if="${session.user != null}"><a th:href="@{/auth/logout}" role="button">로그아웃</a></li>
+                <li th:if="${session.user != null}"><a th:href="@{/users/{userId}/form(userId=${session.user.userId})}" role="button">개인정보수정</a></li>
             </ul>
         </div>
     </div>
@@ -77,10 +77,16 @@
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default content-main">
           <form name="question" method="post" th:action="@{/articles}">
+
+              <!-- 로그인 사용자 이름을 자동으로 저장 -->
+              <input type="hidden" id="writer" name="writer" th:value="${session.user != null ? session.user.name : ''}" />
+              <!--
               <div class="form-group">
                   <label for="writer">글쓴이</label>
                   <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
               </div>
+               -->
+
               <div class="form-group">
                   <label for="title">제목</label>
                   <input type="text" class="form-control" id="title" name="title" placeholder="제목"/>
