--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -38,10 +38,10 @@
                     <div class="article-util">
                         <ul class="article-util-list">
                             <li>
-                                <a class="link-modify-article" th:href="@{/articles/{id}/form(id=${article.articleId})}">수정</a>
+                                <a class="link-modify-article" th:href="@{/articles/{id}/form(id=${article.id})}">수정</a>
                             </li>
                             <li>
-                                <form class="form-delete" th:action="@{/articles/{id}(id=${article.articleId})}" method="POST">
+                                <form class="form-delete" th:action="@{/articles/{id}(id=${article.id})}" method="POST">
                                     <input type="hidden" name="_method" value="DELETE">
                                     <button class="link-delete-article" type="submit">삭제</button>
                                 </form>
