--- a/src/main/resources/templates/user/passwordVerifyForm.html
+++ b/src/main/resources/templates/user/passwordVerifyForm.html
@@ -23,7 +23,7 @@
                 비밀번호가 일치하지 않습니다.
             </div>
 
-            <form name="passwordVerify" method="post" th:action="@{/users/{seq}/verify-password(seq=${seq})}">
+            <form name="passwordVerify" method="post" th:action="@{/users/{id}/verify-password(id=${id})}">
                 <div class="form-group">
                     <label for="password">비밀번호</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="현재 비밀번호를 입력하세요" required>
