--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -16,6 +16,9 @@
     <th:block th:replace="~{layout/subnav :: subnav}"></th:block>
 
     <div class="container" id="main">
+        <script th:if="${errorMessage}">
+            alert('[[${errorMessage}]]');
+        </script>
        <div class="col-md-6 col-md-offset-3">
           <div class="panel panel-default content-main">
               <form name="question" method="post" action="/users/login">
