--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -37,7 +37,67 @@ h1, h2 {
     line-height: 1.8;
     font-size: 1.1rem;
     color: #374151;
+    width: 100%;
+    height: 300px;
+    position: relative;
 }
+
+.post-content textarea {
+    width: 100%;
+    height: 100%;
+    resize: none;
+    border: none;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.post-table {
+    width: 100%;
+    border-collapse: separate; /* 셀 간의 경계선 구분 */
+    border-spacing: 0; /* 셀 간격 없애기 */
+    margin: 20px 0;
+    font-family: Arial, sans-serif;
+    border-radius: 10px; /* 전체 테이블에 둥근 테두리 추가 */
+    overflow: hidden; /* 둥근 테두리 외의 내용이 넘어가지 않도록 설정 */
+    border: 1px solid #ddd; /* 테이블 외부 테두리 */
+}
+
+.post-table th, .post-table td {
+    padding: 12px;
+    text-align: left;
+    border: 1px solid #ddd; /* 셀의 테두리 */
+}
+
+.post-table th {
+    background-color: #f4f4f4;
+    font-weight: bold;
+    color: #333;
+}
+
+.post-table tbody tr:hover {
+    background-color: #f9f9f9;
+}
+
+.post-table .number-column, .post-table .author-column {
+    width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.post-table .title-column {
+    width: auto;
+}
+
+.post-table td a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+.post-table td a:hover {
+    text-decoration: underline;
+}
+
 .author-info {
     background: white;
     padding: 1.5rem;
