--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,24 +4,28 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<header th:fragment="header">
+<header th:fragment="header" style="margin-top: 1rem; margin-bottom: 5rem;">
   <nav class="navbar navbar-expand-lg" style="background-color: #FFFFFF;">
     <div class="container-fluid">
-      <div class="d-flex ms-auto me-auto">
-        <a class="navbar-brand ms-3" href="/">Codestagram</a>
+      <div class="d-flex me-auto" style="margin-left: 12rem; margin-top: 1rem">
+        <a class="navbar-brand ms-3" href="/">
+          <h1>Codestagram</h1>
+        </a>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      </div>
-      <div class="d-flex">
-        <a class="btn btn-primary" th:unless="${session.loginUser}" th:href="@{/users/loginForm}">로그인</a>
-        <a class="btn" th:unless="${session.loginUser}" th:href="@{/users/form}">회원가입</a>
-        <form th:if="${session.loginUser}" action="/users/logout" method="post">
-          <button class="btn btn-primary" type="submit" >로그아웃</button>
-        </form>
-        <a class="btn" th:if="${session.loginUser}"th:href="@{/users/{id}/form(id=${session.loginUser.id})}">개인정보수정</a>
+      <div class="d-flex ms-auto" style="margin-right: 12rem">
+        <div class="d-flex" style="margin-right: 1rem; margin-top: 1rem">
+          <p th:if="${session.loginUser}" class="form-subtitle">
+            <span th:text="${session.loginUser.name}"></span>님 환영합니다.
+          </p>
+        </div>
+        <div class="d-flex">
+          <a class="btn btn-primary" th:unless="${session.loginUser}" th:href="@{/users/loginForm}">로그인</a>
+          <a class="btn" th:unless="${session.loginUser}" th:href="@{/users/form}">회원가입</a>
+          <form th:if="${session.loginUser}" action="/users/logout" method="post">
+            <button class="btn btn-primary" type="submit" >로그아웃</button>
+          </form>
+          <a class="btn" th:if="${session.loginUser}"th:href="@{/users/{id}/form(id=${session.loginUser.id})}">개인정보수정</a>
+        </div>
       </div>
     </div>
   </nav>
