--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -8,7 +8,7 @@
 <main layout:fragment="content">
     <div class="container mx-auto px-4 py-8 max-w-4xl">
         <div class="form-header">
-            <h1 class="form-title">회원 가입</h1>
+            <h3 class="form-title">회원 가입</h3>
             <p class="form-subtitle">CodeStargram에 오신걸 환영합니다.</p>
         </div>
         <div class="form-container">
@@ -34,8 +34,8 @@
                     <input type="password" class="form-input" id="password" name="password" placeholder="비밀번호를 입력하세요">
                 </div>
 
-                <div class="flex justify-between mt-8">
-                    <button type="submit" class="btn btn-primary">등록하기</button>
+                <div class="d-grid gap-2 d-flex justify-content-center mt-4">
+                    <button type="submit" class="btn btn-lg btn-primary px-5 py-3">등록하기</button>
                 </div>
             </form>
         </div>
