--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,9 +8,11 @@
 <main layout:fragment="content">
   <div class="container d-flex justify-content-center align-items-center" style="min-height: 70vh;">
     <div class="col-12 col-md-6 col-lg-4">
+      <div class="form-header">
+        <h3 class="form-title">Codestagram</h3>
+      </div>
       <div class="card">
         <div class="card-body p-4">
-          <h2 class="text-center mb-4">로그인</h2>
           <form method="post" action="/users/login">
             <div class="mb-3">
               <label for="loginId" class="form-label">아이디</label>
