refactor: 네비게이션바 정리

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -44,9 +44,9 @@
                     </td>
                     <td th:text="${user.name}"></td>
                     <td th:text="${user.email}"></td>
-                    <td>
-                        <a th:href="@{/users/{userId}/form(userId=${user.userId})}" class="btn btn-success">수정</a>
-                    </td>
+<!--                    <td>-->
+<!--                        <a th:href="@{/users/{userId}/form(userId=${user.userId})}" class="btn btn-success">수정</a>-->
+<!--                    </td>-->
                 </tr>
                 </tbody>
             </table>
