--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,4 +1,3 @@
-<!-- templates/fragments/navbar.html -->
 <html lang="kr" xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="navbar">
     <div class="navbar navbar-default" id="subnav">
@@ -7,6 +6,32 @@
                 <a href="/" class="navbar-btn btn btn-default btn-plus dropdown-toggle" data-toggle="dropdown">
                     <i class="glyphicon glyphicon-home" style="color:#dd1111;"></i> Home
                 </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse2">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="/" role="button">Posts</a></li>
+
+                    <!-- 로그인 안 했을 때 -->
+                    <li th:if="${session.loginUser == null}">
+                        <a href="/user/login" role="button">로그인</a>
+                    </li>
+                    <li th:if="${session.loginUser == null}">
+                        <a href="/user/form" role="button">회원가입</a>
+                    </li>
+
+                    <!-- 로그인 했을 때 -->
+                    <li th:if="${session.loginUser != null}">
+                        <form th:action="@{/user/logout}" method="post" style="margin: 0; display: inline;">
+                            <button type="submit" class="btn btn-link navbar-btn"
+                                    style="padding: 10px 15px; margin-top: 5px; border: none; background: none; color: #337ab7;">
+                                로그아웃
+                            </button>
+                        </form>
+                    </li>
+                    <li th:if="${session.loginUser != null}">
+                        <a th:href="@{/users/{id}/form(id=${session.loginUser.userId})}" role="button">개인정보수정</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
