--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -20,6 +20,7 @@
 <div class="container" id="main">
     <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default content-main">
+            <div th:if="${error}" class="alert alert-danger" role="alert" th:text="${error}"></div>
             <form method="post" th:action="@{/users/{userId}/update(userId=${user.userId})}">
                 <input type="hidden" name="_method" value="PUT">
                 <div class="form-group">
