[훈] Step5-1 로그인 구현 (#49)
* Docs: 4단계 README 세팅

* Feat(LoginController): 로그인 관련 컨트롤러 LoginController 추가

- @GetMapping: 로그인 폼, 로그아웃
- @PostMapping: 로그인 처리 요청

* Feat(SessionService): SessionService 추가

- 세션에 User 객체를 저장하는 로그인
- 세션에서 User 객체를 삭제하는 로그아웃
- 세션에서 유저를 조회하는 getLoggedInUser
- 로그인 여부 확인 메서드인 isLoggedIn

* Feat(LoginRequest): 로그인 요청 DTO인 LoginRequest 추가

* Refactor(UserController): POST 로그인 요청을 try-catch에서 if-else로 변경

* Refactor(UserRepository): UserRepository 구현체들 삭제

- jdbc, jdbcTemplate, jpa, spring data jpa 방식으로 구현한 구현체들을 삭제하고 UserRepository가 JpaRepository를 확장하게끔 변경

* Feat(UserService): userId와 password로 유저를 찾아오는 메서드 추가

* Remove: sql 패키지 삭제

* Feat: 중복 회원 아이디 검증 추가

- findByUserId로 유저를 조회하여 존재한다면 예외를 던지는 메서드 추가

* Refactor(LoginController): 로그인 요청을 if-else에서 try-catch로 변경

* Refactor(UserService): 회원 인증 로직 수정

- 예외를 던지는 방식으로 예외 상황 구체화

* Refactor(User): @Column 애노테이션 삭제

* Feat(login.html): 오류 박스 추가

* Feat(fragments.html): 로그인 유무에 따른 버튼 조건 추가

* Feat(UserController): 회원 정보 수정 로직에 로그인된 사용자의 정보 수정만 가능하게끔 수정`

* Feat(error.html): 에러 페이지 추가

* Refactor(application.yaml): ddl-auto의 값을 update로 수정

* 변경 사항 저장

* Remove: ArticleRepository 구현체 삭제

* Feat(ArticleRepository): JpaRepository 확장

* Refactor(Article): 필드명 변경

- articleId를 id로 변경

* Refactor: articleId로 된 리터럴을 id로 수정

* Refactor(User): 필드명 변경

- seq 필드의 이름을 id로 변경
- 그에 따른 코드 수정

* Feat(Article): writer의 타입 변경

- String에서 User로 타입 변경`

* Refactor: 글쓴이로 userId를 받아 조회하는 로직으로 수정

* Refactor: User와 Article 연관관계 매핑에 대한 수정

* Doce(README): README에 구현내용 작성

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -24,7 +24,7 @@
                             <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                         </div>
                         <div class="article-header-text">
-                            <a href="#" class="article-author-name" th:text="${article.writer}">kimmunsu</a>
+                            <a href="#" class="article-author-name" th:text="${article.writer.userId}">kimmunsu</a>
                             <a href="#" class="article-header-time" title="퍼머링크">
                                 2015-12-30 01:47
                                 <i class="icon-link"></i>
@@ -38,10 +38,10 @@
                     <div class="article-util">
                         <ul class="article-util-list">
                             <li>
-                                <a class="link-modify-article" th:href="@{/articles/{id}/form(id=${article.articleId})}">수정</a>
+                                <a class="link-modify-article" th:href="@{/articles/{id}/form(id=${article.id})}">수정</a>
                             </li>
                             <li>
-                                <form class="form-delete" th:action="@{/articles/{id}(id=${article.articleId})}" method="POST">
+                                <form class="form-delete" th:action="@{/articles/{id}(id=${article.id})}" method="POST">
                                     <input type="hidden" name="_method" value="DELETE">
                                     <button class="link-delete-article" type="submit">삭제</button>
                                 </form>
