[BRIE] Step5-1 로그인 구현 (#48)
* refactor: transaction 메서드에 적용하도록 변경

* add: 주석 추가

* refactor: 기존 repository 삭제하고 스프링 데이터 jpa를 사용하도록 변경

* refactor: 컴포넌트스캔 방식으로 변경

* refactor: 아이디중복은 에러말고 boolean으로 처리
* 에러는 정말 에러상황일때만 사용하는것이 좋음

* refactor: dto로 분리

* refactor: html 수정

* feat: 로그인 구현

* feat: 컨트롤러와 뷰 컨트롤러의 충돌 해결

* refactor: 로그인 상태이면 로그아웃이 보이게 수정
* 로그인: 로그아웃, 개인정보 수정
* 로그인x : 로그인, 회원가입

* feat: 테스트 데이터 추가

* refactor: 로그아웃 -> postmapping

* feat: 로그인/로그아웃 테스트

* feat: 개인정보 수정 로직 구현

* feat: 로그아웃 html 폼 post 요청으로 변경

* feat: 개인정보 수정 테스트 코드

* fix: readme 수정

--- a/src/main/resources/templates/layout/subnav.html
+++ b/src/main/resources/templates/layout/subnav.html
@@ -6,7 +6,7 @@
                 <small><i class="glyphicon glyphicon-chevron-down"></i></small>
             </a>
             <ul class="nav dropdown-menu">
-                <li><a href="profile.html"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Profile</a></li>
+                <li><a th:href="@{/users/profile}"><i class="glyphicon glyphicon-user" style="color:#1111dd;"></i> Profile</a></li>
                 <li class="nav-divider"></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog" style="color:#dd1111;"></i> Settings</a></li>
             </ul>
@@ -20,10 +20,22 @@
         <div class="collapse navbar-collapse" id="subnav-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a th:href="@{/}">Posts</a></li>
-                <li><a th:href="@{/users/login}" role="button">로그인</a></li>
-                <li><a th:href="@{/users/new}" role="button">회원가입</a></li>
-                <li><a href="#" role="button">로그아웃</a></li>
-                <li><a href="#" role="button">개인정보수정</a></li>
+                <!-- 사용자가 로그인하지 않았을 때 -->
+                <li th:if="${session.user == null}">
+                    <a th:href="@{/users/login}" role="button">로그인</a>
+                </li>
+                <li th:if="${session.user == null}">
+                    <a th:href="@{/users/new}" role="button">회원가입</a>
+                </li>
+
+                <!-- 사용자가 로그인했을 때 -->
+                <li th:if="${session.user != null}">
+                    <a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">로그아웃</a>
+                </li>
+                <form id="logoutForm" th:action="@{/users/logout}" method="post" style="display:none;"></form>
+                <li th:if="${session.user != null}">
+                    <a th:href="@{/users/edit/{id}(id=${session.user.id})}" role="button">개인정보수정</a>
+                </li>
             </ul>
         </div>
     </div>
