--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -37,15 +37,17 @@
                     </div>
                     <div class="article-util">
                         <ul class="article-util-list">
-                            <li>
-                                <a class="link-modify-article" th:href="@{/articles/{id}/form(id=${article.id})}">수정</a>
-                            </li>
-                            <li>
-                                <form class="form-delete" th:action="@{/articles/{id}(id=${article.id})}" method="POST" onsubmit="return confirm('게시글을 삭제하시겠습니까?');">
-                                    <input type="hidden" name="_method" value="DELETE">
-                                    <button class="link-delete-article" type="submit">삭제</button>
-                                </form>
-                            </li>
+                            <th:block th:if="${session.LOGGED_IN_USER_ID != null && session.LOGGED_IN_USER_ID == article.writer.id}">
+                                <li>
+                                    <a class="link-modify-article" th:href="@{/articles/{id}/form(id=${article.id})}">수정</a>
+                                </li>
+                                <li>
+                                    <form class="form-delete" th:action="@{/articles/{id}(id=${article.id})}" method="POST" onsubmit="return confirm('게시글을 삭제하시겠습니까?');">
+                                        <input type="hidden" name="_method" value="DELETE">
+                                        <button class="link-delete-article" type="submit">삭제</button>
+                                    </form>
+                                </li>
+                            </th:block>
                             <li>
                                 <a class="link-modify-article" href="/">목록</a>
                             </li>
