Refactor: userId말고 name을 보여주도록 함 dto의 필드도 name으로 변경

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -18,7 +18,7 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{article.user.userId}}</a>
+                          <a href="/users/92/kimmunsu" class="article-author-name">{{article.user.name}}</a>
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
                               {{article.createdAt}}
                               <i class="icon-link"></i>
@@ -57,7 +57,7 @@
                                       <img src="https://graph.facebook.com/v2.3/1324855987/picture" class="article-author-thumb" alt="">
                                   </div>
                                   <div class="article-header-text">
-                                      <a href="/users/{{userId}}" class="article-author-name">{{userName}}</a>
+                                      <a href="/users/{{userId}}" class="article-author-name">{{name}}</a>
                                       <a href="#answer-1434" class="article-header-time" title="퍼머링크">
                                           {{createdAt}}
                                       </a>
