--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
                           <div class="auth-info">
                               <i class="icon-add-comment"></i>
                               <span class="time">{{createdAt}}</span>
-                              <a href="./user/profile.html" class="author">{{user.userId}}</a>
+                              <a href="./user/profile.html" class="author">{{user.name}}</a>
                           </div>
                           <div class="reply" title="댓글">
                               <i class="icon-reply"></i>
